[package]
name = "rocketvale"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
lazy_static = "1.4.0"
memalloc = "0.1.0"

# [build-dependencies]
# cc = "1.0.28"

[lib]
name = "rocketvale"
crate-type = ["staticlib", "cdylib"]
