[package]
name = "rocketvale"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
lazy_static = "1.4.0"
memalloc = "0.1.0"
tokio = "1.24.2"

# [build-dependencies]
# cc = "1.0.28"

[lib]
name = "rocketvale"
crate-type = ["staticlib", "cdylib"]
